Page MenuHome GnuPG

Dirmngr: no suitable certificate found to verify the OCSP response
Closed, ResolvedPublic

Description

It was reported in the Wald Message Board that OCSP validation fails for several "real world" certificates with the message above. I can reproduce that under GNU/Linux with current gnupg.

The Forum Message is: https://wald.intevation.org/forum/message.php?msg_id=5947&group_id=11

Next steps:

  • Analyze why dirmngr can't validate the OCSP Response and what other tools do that verify the response.